<resources>
    <string name="app_name">TweetHunter</string>
    <string name="str_intro_text">See what\'s happening in the world right now</string>
    <string name="str_create_account">CREATE ACCOUNT</string>
    <string name="have_account">Have an account already</string>
    <string name="str_log_in">Login</string>
    <string name="str_create_your_account">Create your account</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome \!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_s_happenning">What\'s happenning?</string>
    <string name="search_hint">Search</string>
    <string name="search_button_text">Search</string>
    <string name="username">mresitcagan</string>
    <string name="full_name">Mehmet Reşit Çağan</string>
    <string name="bio">MSKU | CENG</string>
    <string name="followers_count">0</string>
    <string name="following_count">0</string>
    <string name="tweets_count">5</string>
    <string name="notifications">Notifications</string>
</resources>