<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@mipmap/tweet_hunter_foreground" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/see_whats"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/str_intro_text"
            />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_create_account"
            android:textAllCaps="false"
            android:layout_below="@+id/see_whats"
            android:layout_marginTop="25dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="40dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/have_account"
            android:text="@string/have_account"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/have_account"
            android:textColor="@color/purple_700"
            android:id="@+id/login"
            android:text="@string/str_log_in"/>


    </RelativeLayout>


</RelativeLayout>